--- a/notebooks/torch-gpu-test.ipynb
+++ b/notebooks/torch-gpu-test.ipynb
@@ -57,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -70,7 +72,6 @@
     }
    ],
    "source": [
-    "\n",
     "device_cnt = torch.cuda.device_count()\n",
     "cur_device = torch.cuda.current_device()\n",
     "device_name = torch.cuda.get_device_name(cur_device)\n",
